--- a/ising_model/citation.bib
+++ b/ising_model/citation.bib
@@ -5,6 +5,13 @@
   archivePrefix  = "arXiv"
 }
 
+@wikipedia{metropolis,
+  title={Metropolis-Hastings algorithm},
+  year={2021},
+  archivePrefix  = "arXiv",
+  url="https://en.wikipedia.org/wiki/Metropolis%E2%80%93Hastings_algorithm"
+}
+
 
 @article{Alessandro:2012,
       author         = "Alessandro Sfondrini",
