--- a/ising_model/notebook.ipynb
+++ b/ising_model/notebook.ipynb
@@ -34,7 +34,7 @@
     "beta = [0.25, 1, 1.5]\n",
     "y = []\n",
     "for i in range(len(beta)):\n",
-    "    y.append(M(x, beta[i]))\n"
+    "    y.append(M(x, beta[i]))"
    ]
   },
   {
@@ -77,13 +77,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 115,
    "metadata": {},
    "outputs": [],
@@ -117,7 +110,7 @@
     "E = np.array(E[1:], dtype=float)\n",
     "M = np.array(M[1:], dtype=float)\n",
     "C_v = np.array(C_v[1:], dtype=float)\n",
-    "Chi = np.array(Chi[1:], dtype=float)\n"
+    "Chi = np.array(Chi[1:], dtype=float)"
    ]
   },
   {
@@ -195,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
