uploaded small-world effect post

--- a/small_world/citation.bib
+++ b/small_world/citation.bib
@@ -1,7 +1,6 @@
 @article{watts_collective_1998,
   added-at = {2021-05-18T16:28:38.000+0200},
   author = {Watts, Duncan J. and Strogatz, Steven H.},
-  biburl = {https://www.bibsonomy.org/bibtex/2b8d3db260a39adbd9a3b93db2896d602/alueschow},
   doi = {10.1038/30918},
   interhash = {02e54cb4f5d01567f9d4d2bfd5ca6587},
   intrahash = {b8d3db260a39adbd9a3b93db2896d602},
@@ -28,3 +27,52 @@
    author={Newman, M.E.J. and Watts, D.J.},
    year={1999},
    month=dec, pages={341–346} }
+
+@book{sethna2021statistical,
+  title={Statistical Mechanics: Entropy, Order Parameters, and Complexity},
+  author={Sethna, J.P.},
+  isbn={9780192634535},
+  series={Oxford Master Series in Physics},
+  year={2021},
+  publisher={OUP Oxford}
+}
+
+@article{Hohenberg_2015,
+   title={An introduction to the Ginzburg–Landau theory of phase transitions and nonequilibrium patterns},
+   volume={572},
+   ISSN={0370-1573},
+   url={http://dx.doi.org/10.1016/j.physrep.2015.01.001},
+   DOI={10.1016/j.physrep.2015.01.001},
+   journal={Physics Reports},
+   publisher={Elsevier BV},
+   author={Hohenberg, P.C. and Krekhov, A.P.},
+   year={2015},
+   month=apr, pages={1–42} }
+
+@article{RevModPhys.49.435,
+  title = {Theory of dynamic critical phenomena},
+  author = {Hohenberg, P. C. and Halperin, B. I.},
+  journal = {Rev. Mod. Phys.},
+  volume = {49},
+  issue = {3},
+  pages = {435--479},
+  numpages = {0},
+  year = {1977},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.49.435},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.49.435}
+}
+
+@book{toulouse1977introduction,
+  title={Introduction to the Renormalization Group and to Critical Phenomena},
+  author={Toulouse, G. and Pfeuty, P.},
+  isbn={9780471994404},
+  lccn={lc76026111},
+  series={A Wiley-interscience publication},
+  year={1977},
+  publisher={Wiley}
+}
+
+
+
